[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://gui/heartTex.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/coin.png" type="Texture" id=3]
[ext_resource path="res://fonts/big_match_35.fnt" type="BitmapFont" id=4]
[ext_resource path="res://gui/MobileControl.tscn" type="PackedScene" id=5]

[node name="HUD" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
script/script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 40.0
margin/top = 30.0
margin/right = 327.0
margin/bottom = 196.0
alignment = 0

[node name="Hp" type="HBoxContainer" parent="VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 287.0
margin/bottom = 57.0
alignment = 0

[node name="heartTex" parent="VBoxContainer/Hp" instance=ExtResource( 2 )]

[node name="Coins" type="HBoxContainer" parent="VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 65.0
margin/right = 287.0
margin/bottom = 129.0
alignment = 0

[node name="CoinsImage" type="TextureFrame" parent="VBoxContainer/Coins"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="CoinsNumber" type="Label" parent="VBoxContainer/Coins"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 72.0
margin/top = 17.0
margin/right = 104.0
margin/bottom = 47.0
custom_fonts/font = ExtResource( 4 )
text = "x0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="HBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 137.0
margin/right = 287.0
margin/bottom = 167.0
alignment = 0

[node name="ScoreLabel" type="Label" parent="VBoxContainer/Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 99.0
margin/bottom = 30.0
custom_fonts/font = ExtResource( 4 )
text = "คะแนน : "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreNumber" type="Label" parent="VBoxContainer/Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 107.0
margin/top = 0.0
margin/right = 125.0
margin/bottom = 30.0
custom_fonts/font = ExtResource( 4 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MobileControl" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 50, 500 )


